# navigation2

./: README.md
.claude/: settings.json
Turtlesim_BT/: README.md  tutorial_groot_linked_ROS2.md
Turtlesim_BT/turtlesim_bt/: CMakeLists.txt  package.xml
Turtlesim_BT/turtlesim_bt/config/: bt_log.fbl
Turtlesim_BT/turtlesim_bt/launch/: launch_nav2_bt_launch.py
Turtlesim_BT/turtlesim_bt/src/: monitoring_nav2.cpp
bcr_bot/: README.md
behavior_plugins/: CMakeLists.txt  NearestFreePointOnPath_structure.md  README.md  nav2_tree_nodes.xml  package.xml
behavior_plugins/behavior_trees/: narrow_path.xml  navigate_to_pose_w_replanning_and_recovery.xml  navigate_w_replanning_speed_narrow_path.xml  waitplace.xml
behavior_plugins/behavior_trees/HumanInNarrowPath/: HumanInNarrowPath_auto_recovery.xml  HumanInNarrowPath_auto_recovery_ver_02.xml  HumanInNarrowPath_auto_recovery_ver_02_1.xml
behavior_plugins/behavior_trees/aside_narrow_path/: move_aside_narrow_path.xml
behavior_plugins/behavior_trees/goal_arrival/: navigate_to_pose_w_infinite_replanning_and_near_goal_recovery06_tolerance.xml  navigate_to_pose_w_infinite_replanning_and_near_goal_recovery06_ver02_tolerance.xml  navigate_to_pose_w_infinite_replanning_and_near_goal_recovery_heading05_1.xml
behavior_plugins/behavior_trees/overwrite_controller/: navigate_w_replanning_speed_narrow_path_02.xml  navigate_w_replanning_speed_narrow_path_automate_velocity.xml
behavior_plugins/include/behavior_plugins/: heading_correction.hpp  human_in_narrow_path.hpp  is_goal_nearby_condition.hpp  keep_running_until_failure.hpp  narrow_path.hpp  nearest_free_point_on_path.hpp  nearest_free_point_on_path_with_map.hpp  recovery_once_per_location.hpp  reset_path.hpp  search_local_goal_aside.hpp  set_costmap_inflation_radius.hpp  set_goal_from_location.hpp  validate_path_action.hpp
behavior_plugins/src/: heading_correction.cpp  human_in_narrow_path.cpp  is_goal_nearby_condition.cpp  keep_running_until_failure.cpp  narrow_path.cpp  nearest_free_point_on_path.cpp  nearest_free_point_on_path_with_map_origin.cpp  plugin_registration.cpp  recovery_once_per_location.cpp  reset_path.cpp  search_local_goal_aside.cpp  set_costmap_inflation_radius.cpp  set_goal_from_location.cpp  validate_path_action.cpp
docker/: .env  Dockerfile  docker-compose.yml
model/: model.config  model.sdf  robot.xacro  robot_test.urdf  sirbot_bridge.yaml
monitoring_tree/: README.md
monitoring_tree/nav2_monitoring_tree/: CMakeLists.txt  nav2_tree_nodes.xml  package.xml  plugins_list.hpp.in
monitoring_tree/nav2_monitoring_tree/config/: nav2_monitor_tree.xml  navigate_to_pose_w_infinite_replanning_and_near_goal_recovery.xml
monitoring_tree/nav2_monitoring_tree/include/nav2_monitoring_tree/: nav2_monitor_utils.hpp
monitoring_tree/nav2_monitoring_tree/include/nav2_monitoring_tree/plugins/action/: compute_path_to_pose_monitor.hpp  controller_selector_monitor.hpp  follow_path_monitor.hpp  planner_selector_monitor.hpp  truncate_path.hpp
monitoring_tree/nav2_monitoring_tree/include/nav2_monitoring_tree/plugins/control/: pipeline_sequence.hpp
monitoring_tree/nav2_monitoring_tree/include/nav2_monitoring_tree/plugins/decorator/: goal_updater.hpp  rate_controller.hpp
monitoring_tree/nav2_monitoring_tree/launch/: launch_nav2_bt_launch.py
monitoring_tree/nav2_monitoring_tree/plugins/action/: back_up_monitor.cpp  clear_costmap_monitor.cpp  compute_path_to_pose_monitor.cpp  controller_selector_monitor.cpp  follow_path_monitor.cpp  get_current_pose.cpp  planner_selector_monitor.cpp  spin_monitor.cpp  truncate_path.cpp  wait_monitor.cpp
monitoring_tree/nav2_monitoring_tree/plugins/condition/: are_poses_near.cpp  goal_updated.cpp  would_a_controller_recovery_help.cpp  would_a_planner_recovery_help.cpp
monitoring_tree/nav2_monitoring_tree/plugins/control/: pipeline_sequence.cpp  recovery_node.cpp  round_robin_node.cpp  sequence_with_memory.cpp
monitoring_tree/nav2_monitoring_tree/plugins/decorator/: goal_updater.cpp  rate_controller.cpp  recovery_once_per_location.cpp
monitoring_tree/nav2_monitoring_tree/src/: monitoring_nav2_goal_arrival.cpp  monitoring_nav2_main.cpp
nav2_behavior_tree/: CMakeLists.txt  README.md  nav2_tree_nodes.xml
nav2_bt_navigator/: CMakeLists.txt  README.md  architecture_navigation_w_replanning.md
nav2_bt_navigator/behavior_trees/: HumanInNarrowPath.xml  follow_narrow_path.xml  navigate_through_poses_w_replanning_and_recovery.xml  navigate_w_replanning_speed_narrow_path.xml
nav2_bt_navigator/behavior_trees/HumanInNarrowPath/: HumanInNarrowPath_auto_recovery_ver_02.xml
nav2_bt_navigator/behavior_trees/aside_narrow_path/: move_aside_narrow_path_original.xml
nav2_bt_navigator/behavior_trees/goal_arrival/: infinite_replanning_and_near_goal_01.xml  navigate_to_pose_w_infinite_replanning_and_near_goal_give_up.xml  navigate_to_pose_w_infinite_replanning_and_near_goal_recovery.xml  navigate_to_pose_w_infinite_replanning_and_near_goal_recovery03_2.xml  navigate_to_pose_w_infinite_replanning_and_near_goal_recovery06_ver01_tolerance.xml
nav2_bt_navigator/config/: location.yaml
nav2_bt_navigator/include/nav2_bt_navigator/plugins/: heading_correction.hpp  human_in_narrow_path.hpp  narrow_path.hpp  nearest_free_point_on_path.hpp  recovery_once_per_location.hpp  reset_path.hpp  search_local_goal_aside.hpp  set_costmap_inflation_radius.hpp  set_goal_from_location.hpp
nav2_bt_navigator/src/navigators/: navigate_through_poses.cpp  navigate_to_pose.cpp
nav2_bt_navigator/src/plugins/: heading_correction.cpp  human_in_narrow_path.cpp  narrow_path.cpp  nearest_free_point_on_path.cpp  recovery_once_per_location.cpp  reset_path.cpp  search_local_goal_aside.cpp  set_costmap_inflation_radius.cpp  set_goal_from_location.cpp
nav2_controller/: README.md
nav2_mppi_controller/: CMakeLists.txt  MPPI_Visual_Diagrams.md  README.md  package.xml  regulate_pure_pursuite_controller_summary.md
nav2_msgs/: CMakeLists.txt
path_projector/: README.md  package.xml  setup.py
people_msgs/: CMakeLists.txt
stm32/: analysis01.md  connect_dongco_mcu_ros.md  (+1 more)
(+112 files in other folders)
